# sgp30-rs

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  build-rpi0.sh
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: linux.rs
src/: async_impl.rs  lib.rs  types.rs
